--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -11,8 +11,8 @@
   }
 
   main {
-    max-width: 70%;
-    margin-left: 35vw;
+    max-width: 100%;
+    margin-left: 30vw;
   }
 
   .tweets {
