--- a/public/styles/tweet-display.css
+++ b/public/styles/tweet-display.css
@@ -14,7 +14,7 @@
 
 .tweets {
   margin: 0px 0px 20px 0px;
-  max-width: 100%;
+  max-width: 80%;
 }
 
 .tweets p {
